--- a/site/src/components/ButtonDemo.astro
+++ b/site/src/components/ButtonDemo.astro
@@ -1,63 +1,40 @@
 ---
 import { Button, ToggleButton, MenuButton } from "a11ync";
 ---
-<hr>
-<button id="basic-btn">Клик</button>
 
-<div id="custom-btn">Клик</div>
+<button id="basic-btn">button</button>
 
-<button id="toggle-btn" data-a11ync-type="toggle">
-  Вкл / выкл
-</button>
+<div id="custom-btn">div</div>
 
-<div id="toggle-custom" data-a11ync-type="toggle">
-  Активно / Не активно
-</div>
+<button id="toggle-btn" data-a11ync-type="toggle">Вкл / выкл (button)</button>
 
-<button id="menu-btn" data-a11ync-type="menu">
-  Открыть меню
-</button>
+<div id="toggle-custom" data-a11ync-type="toggle">Активно / Не активно (div)</div>
 
-<div id="menu-custom" data-a11ync-type="menu">
-  Меню
-</div>
+<button id="menu-btn" data-a11ync-type="menu">Открыть меню (button)</button>
 
-<hr>
+<div id="menu-custom" data-a11ync-type="menu">Меню (div)</div>
+
 <script>
   import { Button, ToggleButton, MenuButton } from 'a11ync';
 
-	const el = document.querySelector('#basic-btn');
-	const btn = new Button(el);
+	new Button(document.querySelector('#basic-btn'));
 
-	const el1 = document.querySelector('#custom-btn');
-	const btn1 = new Button(el1);
+	new Button(document.querySelector('#custom-btn'));
 
-	const el2 = document.querySelector('#toggle-btn');
-	const toggle = new ToggleButton(el2, {
+	const toggle = new ToggleButton(document.querySelector('#toggle-btn'), {
 		pressed: false,
 		onToggle: (v) => console.log('pressed:', v),
 	});
 
-	const el3 = document.querySelector('#toggle-custom');
-	const toggle3 = new ToggleButton(el3, {
+	const toggle3 = new ToggleButton(document.querySelector('#toggle-custom'), {
 		pressed: true,
 	});
 
-	const el4 = document.querySelector('#menu-btn');
-	const menuBtn = new MenuButton(el4, {
+	const menuBtn = new MenuButton(document.querySelector('#menu-btn'), {
 		expanded: false,
 	});
 
-	const el5 = document.querySelector('#menu-custom');
-	const menuBtn5 = new MenuButton(el5, {
+	const menuBtn5 = new MenuButton(document.querySelector('#menu-custom'), {
 		expanded: true,
 	});
 </script>
-
-<style>
-.a11y-btn {
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  cursor: pointer;
-}
-</style>
