--- a/site/src/layouts/DocsLayout.astro
+++ b/site/src/layouts/DocsLayout.astro
@@ -1,5 +1,6 @@
 ---
 import Sidebar from "../components/Sidebar/Sidebar.astro";
+import "../styles/global.css";
 const { title, description } = Astro.props;
 ---
 
@@ -12,23 +13,23 @@ const { title, description } = Astro.props;
 
 <body>
   <div class="layout">
-    <Sidebar />
-
     <main class="content">
       <article>
         <slot />
       </article>
     </main>
+
+		<Sidebar class="sidebar"/>
   </div>
 </body>
 </html>
 
 <style>
 .layout {
-  display: flex;
+  display: grid;
+	grid-template-columns: 1.618fr 1fr;
 }
 .content {
-
   padding: 2rem;
 }
 </style>
