--- a/site/src/layouts/HomeLayout.astro
+++ b/site/src/layouts/HomeLayout.astro
@@ -6,6 +6,7 @@ const { frontmatter } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{frontmatter.title ?? "A11YNC"}</title>
   </head>
 
