--- a/site/src/components/Sidebar/Sidebar.astro
+++ b/site/src/components/Sidebar/Sidebar.astro
@@ -24,6 +24,7 @@ import { sidebar } from "./sidebar.config";
 
 <style>
 	.sidebar {
+		width: 100%;
 		padding: 2rem 1rem;
 		background-color: var(--color-bg);
 	}
