--- a/site/src/layouts/DocsLayout.astro
+++ b/site/src/layouts/DocsLayout.astro
@@ -80,6 +80,10 @@ const { title, description } = Astro.props;
 	width: 100%;
 }
 
+.content {
+  padding: 2rem;
+}
+
 @media (min-width: 769px) {
 	.pane {
 		display: grid;
